# THOR_in_vivo_firmware_Simplicity

./: .cproject  .gitattributes  .gitignore  .project  .projectlinkstore  AD5940Main.c  CMakeCache.txt  EFR32_port.c  Makefile  THOR_in_vivo_firmware_CMake.pintool  THOR_in_vivo_firmware_CMake.slcp  THOR_in_vivo_firmware_CMake.slps  THOR_in_vivo_firmware_test.pintool  THOR_in_vivo_firmware_test.slcp  THOR_in_vivo_firmware_test.slps  THOR_in_vivo_firmware_test_tmp.pintool  THOR_in_vivo_firmware_test_tmp.slcp  THOR_in_vivo_firmware_test_tmp.slps  app.c  app.h  cmake_install.cmake  imported_project_report.html  main.c  readme.md
.pdm/: uc.module.setup.CommonProjectPostBuild.com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.debug#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ProjectPostBuild.com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.debug#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.componentSetup.com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.debug#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.defaultSettings.com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.debug#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucConfig.com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.debug#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucProject.com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.debug#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucTemplate.com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.debug#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj
.uceditor/: .THOR_in_vivo_firmware_CMake.emlib_gpio_simple_initLED.cedit  .THOR_in_vivo_firmware_CMake.emlib_gpio_simple_initMagSwitch.cedit  .THOR_in_vivo_firmware_test.app_assert.cedit  .THOR_in_vivo_firmware_test.emlib_gpio_simple_initAD5940_CS.cedit  .THOR_in_vivo_firmware_test.emlib_gpio_simple_initAD5940_INT.cedit  .THOR_in_vivo_firmware_test.emlib_gpio_simple_initAD5940_RST.cedit  .THOR_in_vivo_firmware_test.emlib_gpio_simple_initMUX_EN.cedit  .THOR_in_vivo_firmware_test.spidrvAD5940_SPI.cedit
GNU ARM v12.2.1 - Debug/: AD5940Main.d  EFR32_port.d  THOR_in_vivo_firmware_test.hex  THOR_in_vivo_firmware_test.map  THOR_in_vivo_firmware_test.out  THOR_in_vivo_firmware_test.s37  app.d  main.d  makefile  sources.mk  subdir.mk
GNU ARM v12.2.1 - Debug/ad5940-examples/examples/AD5940_Ramp/: RampTest.d  subdir.mk
GNU ARM v12.2.1 - Debug/ad5940-examples/examples/AD5940_SqrWaveVoltammetry/: SqrWaveVoltammetry.d  subdir.mk
GNU ARM v12.2.1 - Debug/ad5940lib/: ad5940.d  subdir.mk
GNU ARM v12.2.1 - Debug/autogen/: sl_device_init_clocks.d  sl_emlib_gpio_simple_init.d  sl_event_handler.d  sl_iostream_handles.d  sl_spidrv_init.d  subdir.mk
GNU ARM v12.2.1 - Debug/gecko_sdk_4.4.5/app/common/util/app_log/: app_log.d  subdir.mk
GNU ARM v12.2.1 - Debug/gecko_sdk_4.4.5/platform/Device/SiliconLabs/EFR32BG27/Source/: startup_efr32bg27.d  subdir.mk  system_efr32bg27.d
GNU ARM v12.2.1 - Debug/gecko_sdk_4.4.5/platform/common/src/: sl_assert.d  sl_slist.d  sl_syscalls.d  subdir.mk
GNU ARM v12.2.1 - Debug/gecko_sdk_4.4.5/platform/common/toolchain/src/: sl_memory.d  subdir.mk
GNU ARM v12.2.1 - Debug/gecko_sdk_4.4.5/platform/driver/debug/src/: sl_debug_swo.d  subdir.mk
GNU ARM v12.2.1 - Debug/gecko_sdk_4.4.5/platform/emdrv/dmadrv/src/: dmadrv.d  subdir.mk
GNU ARM v12.2.1 - Debug/gecko_sdk_4.4.5/platform/emdrv/gpiointerrupt/src/: gpiointerrupt.d  subdir.mk
GNU ARM v12.2.1 - Debug/gecko_sdk_4.4.5/platform/emdrv/spidrv/src/: spidrv.d  subdir.mk
GNU ARM v12.2.1 - Debug/gecko_sdk_4.4.5/platform/emlib/src/: em_burtc.d  em_cmu.d  em_core.d  em_emu.d  em_eusart.d  em_gpio.d  em_ldma.d  em_msc.d  em_rtcc.d  em_system.d  em_timer.d  em_usart.d  subdir.mk
GNU ARM v12.2.1 - Debug/gecko_sdk_4.4.5/platform/service/device_init/src/: sl_device_init_dcdc_s2.d  sl_device_init_emu_s2.d  sl_device_init_nvic.d  subdir.mk
GNU ARM v12.2.1 - Debug/gecko_sdk_4.4.5/platform/service/iostream/src/: sl_iostream.d  sl_iostream_retarget_stdio.d  sl_iostream_stdlib_config.d  sl_iostream_swo.d  subdir.mk
GNU ARM v12.2.1 - Debug/gecko_sdk_4.4.5/platform/service/sleeptimer/src/: sl_sleeptimer.d  sl_sleeptimer_hal_burtc.d  sl_sleeptimer_hal_prortc.d  sl_sleeptimer_hal_rtcc.d  sl_sleeptimer_hal_timer.d  subdir.mk
GNU ARM v12.2.1 - Debug/gecko_sdk_4.4.5/platform/service/system/src/: sl_system_init.d  sl_system_process_action.d  subdir.mk
GNU ARM v12.2.1 - Debug/gecko_sdk_4.4.5/platform/service/udelay/src/: sl_udelay.d  subdir.mk
THOR_in_vivo_firmware_CMake_cmake/: CMakeLists.txt  CMakePresets.json  THOR_in_vivo_firmware_CMake.cmake  toolchain.cmake
THOR_in_vivo_firmware_CMake_tmp_cmake/: CMakeLists.txt  CMakePresets.json  THOR_in_vivo_firmware_CMake_tmp.cmake
ad5940-examples/examples/AD5940_Ramp/: RampTest.c  RampTest.h
ad5940-examples/examples/AD5940_SqrWaveVoltammetry/: SqrWaveVoltammetry.c  SqrWaveVoltammetry.h
autogen/: .crc_config.crc  gen.properties  linkerfile.icf  linkerfile.ld  sl_component_catalog.h  sl_device_init_clocks.c  sl_emlib_gpio_simple_init.c  sl_event_handler.c  sl_spidrv_init.c  sl_spidrv_instances.h
autogen/.slc_state/: .crc_config.crc
config/: pin_config.h  sl_emlib_gpio_init_AD5940_CS_config.h  sl_emlib_gpio_init_AD5940_INT_config.h  sl_emlib_gpio_init_AD5940_RST_config.h  sl_emlib_gpio_init_LED_config.h  sl_emlib_gpio_init_MUX_EN_config.h  sl_emlib_gpio_init_MagSwitch_config.h  sl_spidrv_AD5940_SPI_config.h
